Bug 328752 - KNemo doesn't show any icon when no interface is configured
Summary: KNemo doesn't show any icon when no interface is configured
Status: RESOLVED FIXED
Alias: None
Product: knemo
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.7.6
Platform: openSUSE Linux
: NOR grave
Target Milestone: ---
Assignee: John Stamp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-13 08:31 UTC by Wolfgang Bauer
Modified: 2018-10-31 12:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Bauer 2013-12-13 08:31:29 UTC
When there's no interface configured (f.e. if you run knemo the first time) it doesn't show any icon.
The bad thing about that is, that you can't even get to the configuration dialog then to configure a network interface. This renders knemo pretty useless on a fresh install.


Reproducible: Always

Steps to Reproduce:
1. Quit knemo if it is running
2. Remove the config file ~/.kde4/share/config/knemorc if it exists
3. Start knemo
Actual Results:  
Nothing happens really. KNemo starts, but it doesn't show any icon or window.

Expected Results:  
A default icon should be shown in the system tray so that you can at least open the configuration dialog.
Or maybe it should show the configuration dialog by itself if there's no interface configured on startup.

As a workaround you can create a knemorc with just an Interfaces=xxx line in the "[General]" section.
Comment 1 Zach 2014-04-20 11:24:21 UTC
Can confirm on a fresh install of Kubuntu 14.04. When I initially installed knemo, the system tray icon failed to appear so the configuration dialog couldnt be opened.  Clicking on knemo from the menu and running it from the terminal did absolutely nothing.  I replaced the stock knemorc file with a file from backups and now it runs fine.
Comment 2 David de Cos 2014-04-27 16:33:32 UTC
This also affects users whose network names have been changed by systemd's new policy to assign predictable names. This has just happened to me after upgrading from OpenSuSE 12.3 to 13.1. My old network name was eth0, got changed to enp0s7. KNemo was nowhere to be found in my panel, although launching it from the terminal insisted that it was already running. I had to do some searching until I found this bug report. I have just solved it by editing knemorc and changing all appearances of eth0 to enp0s7.
Comment 3 John Stamp 2014-04-28 21:14:36 UTC
SVN commit 1385644 by jstamp:

Find the default gateway again

Passing the NL_AUTO_PROVIDE flag omits some routes


 M  +1 -1      netlinkbackend.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1385644
Comment 4 Wolfgang Bauer 2014-08-26 09:44:03 UTC
(In reply to John Stamp from comment #3)
> SVN commit 1385644 by jstamp:
Thanks, this is indeed an improvement (for a fresh user account/first start of knemo at least).

But I noticed some (IMHO) confusing behavior now:
In the case of no configuration, knemo does show an icon for the active network connection (which is good of course).
If you right-click on the icon and select "Configure KNemo", the interface list in the settings is still empty. You have to add the interface manually to change its icon e.g.
And, even worse, if you configure something else (like the information that is shown in the tooltip) and press Apply/OK, the icon suddenly disappears, as knemo saves its configuration with an empty interface list.

So I think the connection should not only be shown, but also be added to knemo's interface list in case none is configured.

@others: you should be able to reach KNemo's configuration in systemsettings ("Configure Desktop" on openSUSE)->Network Settings->Network Monitor even if it doesn't display any icon. I didn't notice this myself until recently... ;)
Comment 5 Andrew Crouthamel 2018-10-29 22:08:50 UTC
Hello! Sorry to be the bearer of bad news, but this project has been unmaintained for many years so I will be closing this bug.
Comment 6 Wolfgang Bauer 2018-10-31 12:52:00 UTC
(In reply to Andrew Crouthamel from comment #5)
> Hello! Sorry to be the bearer of bad news, but this project has been
> unmaintained for many years so I will be closing this bug.

The status was "FIXED" though, why change it to "UNMAINTAINED"?