Find the default gateway again

Passing the NL_AUTO_PROVIDE flag omits some routes

BUG:328752

svn path=/trunk/extragear/network/knemo/; revision=1385644